--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-sasanggu2" style="display: none;">
-      <p>지하철 분포 3등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 3등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-sasanggu3" style="display: none;">
@@ -89,10 +89,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-sahagu2" style="display: none;">
-      <p>지하철 분포 2등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-sahagu3" style="display: none;">
@@ -128,10 +128,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-namgu2" style="display: none;">
-          <p>지하철 분포 2등급</p>    
-          <p>지반 위험도 0등급</p>
-          <p>지하수 0등급</p>
-          <p>노후건물 분포 0등급</p>
+          <p><strong>지하철 분포</strong> 2등급</p>    
+          <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+          <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+          <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-namgu3" style="display: none;">
@@ -164,10 +164,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-haeundaegu2" style="display: none;">
-      <p>지하철 분포 2등급</p> 
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p> 
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-haeundaegu3" style="display: none;">
@@ -199,10 +199,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-dongnaegu2" style="display: none;">
-      <p>지하철 분포 4등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 4등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-dongnaegu3" style="display: none;">
@@ -237,10 +237,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-yeonjegu2" style="display: none;">
-      <p>지하철 분포 3등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 3등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-yeonjegu3" style="display: none;">
@@ -276,10 +276,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-suyeonggu2" style="display: none;">
-      <p>지하철 분포 3등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 3등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-suyeonggu3" style="display: none;">
@@ -311,10 +311,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-geumjeonggu2" style="display: none;">
-      <p>지하철 분포 2등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-geumjeonggu3" style="display: none;">
@@ -347,10 +347,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-bukgu2" style="display: none;">
-      <p>지하철 분포 3등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 3등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-bukgu3" style="display: none;">
@@ -382,10 +382,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-gijanggun2" style="display: none;">
-      <p>지하철 분포 2등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-gijanggun3" style="display: none;">
@@ -417,10 +417,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-busanjingu2" style="display: none;">
-      <p>지하철 분포 3등급</p>
-      <p>지반 위험도 3등급</p>
-      <p>지하수 2등급</p>
-      <p>노후건물 분포 2등급</p>
+      <p><strong>지하철 분포</strong> 3등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-busanjingu3" style="display: none;">
@@ -457,10 +457,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-donggu2" style="display: none;">
-      <p>지하철 분포 2등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-donggu3" style="display: none;">
@@ -491,10 +491,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-seogu2" style="display: none;">
-      <p>지하철 분포 2등급</p>
-      <p>지반 위험도 3등급</p>
-      <p>지하수 3등급</p>
-      <p>노후건물 분포 3등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-seogu3" style="display: none;">
@@ -529,10 +529,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-junggu2" style="display: none;">
-      <p>지하철 분포 2등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 2등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-junggu3" style="display: none;">
@@ -565,10 +565,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-yeongdogu2" style="display: none;">
-      <p>지하철 분포 1등급</p>
-      <p>지반 위험도 2등급</p>
-      <p>지하수 2등급</p>
-      <p>노후건물 분포 2등급</p>
+      <p><strong>지하철 분포</strong> 1등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-yeongdogu3" style="display: none;">
@@ -603,10 +603,10 @@
     </div>
 
     <div class="info-box info-box2" id="info-gangseogu2" style="display: none;">
-      <p>지하철 분포 1등급</p>
-      <p>지반 위험도 0등급</p>
-      <p>지하수 0등급</p>
-      <p>노후건물 분포 0등급</p>
+      <p><strong>지하철 분포</strong> 1등급</p>
+      <p><strong>지반 위험도</strong> <span style="color: gray; font-size: 15px;">※한국지질자원연구원 / 국토지반정보통합DB</span></p>
+      <p><strong>지하수 침투성능</strong> <span style="color: gray; font-size: 15px;">※농업과학기술원 등 참고 자료 기반</span></p>
+      <p><strong>노후건물 분포</strong> <span style="color: gray; font-size: 15px;">※30년 이상 노후건물 밀집도 분석 중</span></p>
     </div>
 
     <div class="info-box info-box3" id="info-gangseogu3" style="display: none;">
@@ -638,18 +638,19 @@
 
     <div id="risk-info-box" style="
     position: absolute;
-    top: 80px;
+    top: 100px;
     right: 5vw;
     width: 700px;
-    background: #fffdf0;
+    background: #e6f7ff;
     border: 1px solid #999;
     padding: 15px;
     font-size: 14px;
-    line-height: 1.6;
+    line-height: 1.4;
     z-index: 900;
     display: none;
+    border-radius: 12px;
    ">
-    <h4 style="margin-top: 0;">위험도 산출 기준</h4>
+    <h4 style="margin-top: 10px; font-size: 20px;">위험도 산출 기준</h4>
     <p>싱크홀 위험도는 단순 사고 수뿐 아니라 다양한 도시 지반 요인을 종합적으로 평가하여 산정됩니다.<br>
     아래 항목들을 정량화하고 가중치를 부여해, <strong>1등급(가장 안전)</strong>부터 <strong>5등급(가장 위험)</strong>까지 분류합니다.</p>
 
