--- a/index.html
+++ b/index.html
@@ -685,7 +685,8 @@
     <div id="guImageBox1"><img id="guImage1" src="" style="width: auto; height: 400px;"></div>
     <div id="guImageBox2"><img id="guImage2" src="" style="width: auto; height: 400px;"></div>
   </div>
-
+  
+  <div id="footer-credit">made by BuilDream</div>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="main.js"></script>
 </body>
